# json-fmt

./: CHANGELOG.md  README.md  default-config.json  json-fmt.cabal
app/: Action.hs  Config.hs  FmtConfig.hs  Lib.hs  Logged.hs  Main.hs  Options.hs  Read.hs  Util.hs
lib/Text/JSON/: Format.hs
lib/Text/JSON/Format/: Config.hs
lib/Text/JSON/Pretty/: CommaFirst.hs
lib/Text/JSON/Pretty/CommaFirst/: Config.hs
resources/: default-config.json  readme.md
sample/: sample.json
