cabal-version:      2.4
name:               json-fmt
version:            0.1.0.1

synopsis: A comma-leading style formatter for JSON

description: Inspired by Haskell style of comma-leading lists, json-fmt is a comma-leading style formatter for JSON.

bug-reports: https://github.com/Futarimiti/json-fmt/issues
license: GPL-3.0-or-later
license-file: LICENSE
author:             Futar
maintainer:         Futarimiti@163.com

category: Text, JSON
extra-source-files: CHANGELOG.md

executable json-fmt
    main-is:          Main.hs
    other-modules: Lib, FmtConfig
    build-depends:
        base ^>=4.14.3.0,
        json ^>=0.10
    hs-source-dirs:   app
-- The license under which the package is released.
    default-language: Haskell2010
