cabal-version:      2.4
name:               json-fmt
version:            0.1.1.0

synopsis: A comma-leading style formatter for JSON

description: Inspired by Haskell style of comma-leading lists, json-fmt is a comma-leading style formatter for JSON.

bug-reports:          https://github.com/Futarimiti/json-fmt/issues
license:              GPL-3.0-or-later
license-file:         LICENSE
author:               Futar
maintainer:           Futarimiti@163.com

category:             Text, JSON, Language
extra-source-files:   CHANGELOG.md

executable json-fmt
    main-is:            Main.hs
    other-modules:      Lib, FmtConfig, Util, Logged
    default-extensions: RecordWildCards
    build-depends:      base
                      , json ^>=0.10
                      , directory ^>=1.3.7.0
                      , filepath ^>=1.4.2.2
                      , transformers ^>=0.6.1.1
    hs-source-dirs:     app
    default-language:   GHC2021
