cabal-version:   3.0
name:            json-fmt
version:         0.1.0.0
synopsis:        A comma-leading style formatter for JSON
description:
  json-fmt is a comma-leading style JSON formatter inspired by Haskell comma-leading style.

bug-reports:     https://github.com/Futarimiti/json-fmt/issues
author:          Futar
maintainer:      Futarimiti@163.com
category:        JSON
build-type:      Simple
extra-doc-files: README.md
data-dir:        resources

common warnings
  ghc-options: -Wall -Wmonomorphism-restriction

common extensions
  default-extensions:
    DeriveAnyClass
    LambdaCase
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

executable json-fmt
  import:           warnings, extensions
  main-is:          Main.hs
  other-modules:
    Action
    Config
    Options
    Read

  build-depends:
    , base                  ^>=4.17.2.1
    , bytestring
    , data-default
    , directory
    , json-fmt
    , monad-logger
    , mtl
    , optparse-applicative
    , text

  hs-source-dirs:   app
  default-language: GHC2021

library
  import:           warnings, extensions
  exposed-modules:  Text.JSON.Pretty.CommaFirst
  other-modules:    Text.JSON.Pretty.CommaFirst.Config
  hs-source-dirs:   lib
  build-depends:
    , aeson
    , base                       ^>=4.17.2.1
    , bytestring
    , data-default
    , json
    , lens
    , mtl
    , prettyprinter
    , prettyprinter-combinators
    , scientific
    , transformers
    , vector

  default-language: GHC2021
